--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: python-demo
   labels:
-    version: v1.1.4
+    version: v1.1.0
 spec:
   replicas: 2
   selector:
@@ -20,6 +20,8 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 8000
+      imagePullSecrets:
+        - name: regsecret
 ---
 apiVersion: v1
 kind: Service
